# kagglehub

./: .dockerignore  .gcloudignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  Untitled.ipynb  docker-hatch  pyproject.toml
integration_tests/: README.md  __init__.py  test_competition_download.py  test_dataset_download.py  test_dataset_upload.py  test_model_download.py  test_model_upload.py  test_notebook_output_download.py  test_package_import.py  test_utility_script_install.py  test_utils.py  utils.py
src/kagglehub/: __init__.py  auth.py  blob_service.proto  cache.py  clients.py  code.py  colab_cache_resolver.py  competition.py  config.py  dataset-metadata.json  datasets.py  datasets_enums.py  datasets_helpers.py  dj.py  enum.py  env.py  exceptions.py  gcs_upload.py  handle.py  hf_datasets.py  http_resolver.py  integrity.py  kaggle_cache_resolver.py  logger.py  logging.py  models.py  models_helpers.py  notebooks.py  packages.py  pandas_datasets.py  polars_datasets.py  registry.py  requirements.py  resolver.py  signing.py  tracing.py  tracing_test.py  tracker.py  utility_script_helpers.py  utility_scripts.py
src/kagglehub/notebooks/: guide_to_upload_keras_models.ipynb
stubs/datasets/: __init__.pyi
tests/: __init__.py  fixtures.py  flask_stub_server.py  test_auth.py  test_cache.py  test_colab_cache_dataset_download.py  test_colab_cache_model_download.py  test_config.py  test_dataset_load.py  test_dataset_upload.py  test_enum.py  test_gcs_upload.py  test_handle.py  test_helpers.py  test_http_competition_download.py  test_http_dataset_download.py  test_http_datasets_download.py  test_http_model_download.py  test_http_notebook_output_download.py  test_http_package_import.py  test_http_requirements.py  test_http_tracker.py  test_integrity.py  test_kaggle_api_client.py  test_kaggle_cache_competition_download.py  test_kaggle_cache_dataset_download.py  test_kaggle_cache_model_download.py  test_kaggle_cache_notebook_output_download.py  test_kaggle_cache_package_import.py  test_kaggle_cache_requirements.py  test_kaggle_cache_tracker.py  test_kaggle_token_auth.py  test_kagglehub_version.py  test_load_dataset.py  test_logger.py  test_model_download.py  test_model_upload.py  test_package_multithreading.py  test_registry.py  test_tracing.py  (+2 more)
tests/data/: dummy.csv  my-spreadsheet.xlsx  shapes.csv  shapes.db  shapes.feather  shapes.json  shapes.jsonl  shapes.parquet  shapes.tsv  shapes.xml
tests/integration/: test_model_download.py
tests/server_stubs/: auth_stub.py  colab_stub.py  competition_download_stub.py  dataset_download_stub.py  dataset_upload_stub.py  jwt_stub.py  kaggle_api_stub.py  kaggle_token_auth_stub.py  model_download_stub.py  model_upload_stub.py  notebook_output_download_stub.py  serv.py
tools/cicd/: Dockerfile  cloudbuild.yaml  integration-tests.yaml
tools/release/: cloudbuild.yaml  prepare-release.sh
tools/scripts/: README.md  download_model.py  load_hf_dataset.py  load_pandas_dataset.py  load_polars_dataset.py
