[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagglehub"
dynamic = [
    "version"
]
description = "Access Kaggle resources anywhere"
authors = [
    { name = "Kaggle", email = "support@kaggle.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["Kaggle", "API"]
requires-python = ">=3.10"
dependencies = [
  "requests", 
  "tqdm",
  "packaging",
  "pyyaml",
  "kagglesdk >= 0.1.14, < 1.0", # sync with kaggle-api
]

[project.urls]
"Homepage" = "https://github.com/Kaggle/kagglehub"
"Bug Tracker" = "https://github.com/Kaggle/kagglehub/issues"

[project.optional-dependencies]
hf-datasets = ["datasets", "kagglehub[pandas-datasets]"]
pandas-datasets = ["pandas"]
signing = [ "model_signing", "sigstore>=3.6.1", "betterproto>=2.0.0b6"]
polars-datasets = ["polars"]

# twine 6.0.1 doesn't support metadata-version 2.4.
# remove `core-metadata-version` pin once twine release a new version with: https://github.com/pypa/twine/pull/1180
[tool.hatch.build.targets.wheel]
core-metadata-version = "2.3" 

[tool.hatch.build.targets.sdist]
core-metadata-version = "2.3"

[tool.hatch.version]
path = "src/kagglehub/__init__.py"

[tool.hatch.envs.hatch-test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "flask",
  "flask-jwt-extended",
  # Used for testing reading Excel file via pandas
  "openpyxl",
  # Used for testing reading Excel file via polars
  "fastexcel",
  "pip",
  "pyjwt[crypto]",
]
features = ["hf-datasets", "signing", "polars-datasets"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.10", "3.11", "3.12"]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "flask",
  "flask-jwt-extended",
  "pyjwt[crypto]",
  "pytest",
  "model_signing",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  # Pre-install typing packages (`types-*`, `pandas_stubs`, `polars` in-built into package) to speed up lint:typing command.
  "types-requests",
  "types-tqdm",
  "pandas_stubs",
  "polars",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/kagglehub tests}"
style = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff check --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

# Set up a separate hatch environment that has the added hf-datasets dependencies
[tool.hatch.envs.hf-datasets]
dependencies = [
  # Used for testing reading Excel file via pandas
  "openpyxl"
]
features = [
  "hf-datasets",
]

# Set up a separate hatch environment that has the added pandas-datasets dependencies
[tool.hatch.envs.pandas-datasets]
dependencies = [
  # Used for testing reading Excel file via pandas
  "openpyxl"
]
features = [
  "pandas-datasets",
]

# Set up a separate hatch environment that has the added polars-datasets dependencies
[tool.hatch.envs.polars-datasets]
dependencies = [
  # Used for testing reading Excel file via polars
  "fastexcel" ]
features = [
  "polars-datasets",
]

# Signing is unable to be installed via uv without a prerelease library: b/395859806
[tool.hatch.envs.signing]
dependencies = [
]
features = [
  "signing",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  # Ignore saved scripts for local kagglehub testing
  "tools/scripts/*",
]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
  "ANN001", 
  "ANN002", 
  "ANN003",
  "ANN201", 
  "ANN202",
  "ANN401",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore md5
  "S324",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore tarfile-unsafe-members
  "S202",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["kagglehub"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"integration_tests/**/*" = ["PLR2004", "S101", "TID252"]
# Ignore unused imports in __init__.py
"src/kagglehub/**/__init__.py" = ["F401"]

[tool.coverage.run]
source_pkgs = ["kagglehub", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
kagglehub = ["src/kagglehub", "*/kagglehub/src/kagglehub"]
tests = ["tests", "*/kagglehub/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
mypy_path = "./stubs"

# TODO(b/307576378): Generate type hints for kagglesdk
[[tool.mypy.overrides]]
module = "kagglesdk.*"
ignore_missing_imports = true
